tdf#109217 - State of the favorite button is not updated immediately

Change-Id: Ibc93277c71e51709d56345e8934f045c60d322ca
Reviewed-on: https://gerrit.libreoffice.org/40914
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Akshay Deep <akshaydeepiitr@gmail.com>